fix: use clockface scrollbar for firstmile wizards

--- a/src/homepageExperience/components/HomepageExperience.scss
+++ b/src/homepageExperience/components/HomepageExperience.scss
@@ -11,8 +11,6 @@ h1#first-mile--header {
   display: flex;
   height: 100%;
   width: 100%;
-
-  overflow-y: scroll;
 }
 
 .homepage-wizard-container--subway {
